--- a/index.html
+++ b/index.html
@@ -4,6 +4,111 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plumber Point</title>
+    <link rel="stylesheet" href="./src/output.css" />
+    <link rel="stylesheet" href="./src/input.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar Start  -->
+    <nav>
+      <div class="container mx-auto">
+        <div class="flex justify-between items-center">
+          <div>
+            <a href="#"><img src="./assets/logo.png" alt="logo" /></a>
+          </div>
+          <!-- navlists -->
+          <div>
+            <ul class="flex justify-between items-center gap-[36px]">
+              <li>
+                <a
+                  class="relative group nav-list-item p-1"
+                  href="#"
+                  aria-label="Home"
+                >
+                  Home
+                  <span
+                    class="w-0 h-0.5 bg-[#DD3142] absolute left-0 -bottom-0 transition-all duration-300 group-hover:w-full"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="relative group nav-list-item p-1"
+                  href="#"
+                  aria-label="Home"
+                >
+                  About us
+                  <span
+                    class="w-0 h-0.5 bg-[#DD3142] absolute left-0 -bottom-0 transition-all duration-300 group-hover:w-full"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="relative group nav-list-item p-1"
+                  href="#"
+                  aria-label="Home"
+                >
+                  Services
+                  <span
+                    class="w-0 h-0.5 bg-[#DD3142] absolute left-0 -bottom-0 transition-all duration-300 group-hover:w-full"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="relative group nav-list-item p-1"
+                  href="#"
+                  aria-label="Home"
+                >
+                  Project
+                  <span
+                    class="w-0 h-0.5 bg-[#DD3142] absolute left-0 -bottom-0 transition-all duration-300 group-hover:w-full"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="relative group nav-list-item p-1"
+                  href="#"
+                  aria-label="Home"
+                >
+                  Blogs
+                  <span
+                    class="w-0 h-0.5 bg-[#DD3142] absolute left-0 -bottom-0 transition-all duration-300 group-hover:w-full"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="relative group nav-list-item p-1"
+                  href="#"
+                  aria-label="Home"
+                >
+                  Contact
+                  <span
+                    class="w-0 h-0.5 bg-[#DD3142] absolute left-0 -bottom-0 transition-all duration-300 group-hover:w-full"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="uppercase text-[12px] text-white font-bold bg-[#DD3142] p-3 rounded-md"
+                  >Request a call back</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar End  -->
+    <main>
+      <!-- Hero section Start -->
+      <section>
+        <div class="container"></div>
+      </section>
+      <!-- Hero section End -->
+    </main>
+  </body>
 </html>
