complete hero section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Navbar Start  -->
-    <nav>
+    <nav class="h-[60px]">
       <div class="container mx-auto">
         <div class="flex justify-between items-center">
           <div>
@@ -105,10 +105,102 @@
     <!-- Navbar End  -->
     <main>
       <!-- Hero section Start -->
-      <section>
-        <div class="container"></div>
+      <section class="bg-[#FFFFFF]">
+        <div class="container mx-auto">
+          <div class="flex justify-between">
+            <!-- left side contact  -->
+            <div class="mt-[153px] leading-14">
+              <h1 class="font-hero text-[44px] font-extrabold uppercase">
+                Call us &nbsp;for any
+              </h1>
+              <h1 class="font-hero text-[44px] font-medium uppercase">
+                Plumbing Needs
+              </h1>
+              <h3
+                class="font-hero text-[34px] font-extrabold mt-[7px] tracking-tighter"
+              >
+                +1800-9938-2839
+              </h3>
+              <button
+                class="w-[160px] h-[44px] rounded-full font-primary text-white leading-6 uppercase bg-[#DD3142] shadow-md"
+              >
+                SEe all Service
+              </button>
+            </div>
+            <!-- right side figure -->
+            <div class="flex items-center mt-[100px] relative">
+              <img
+                src="./assets/image 10.png"
+                alt="figure"
+                class="w-[302px] h-[436px] absolute -left-[270px] z-10"
+              />
+              <img
+                src="./assets/image 9.png"
+                alt="figure"
+                class="w-[390px] h-[341px]"
+              />
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Hero section End -->
+      <section class="bg-[#DD3142] mt-[48px]">
+        <div class="container mx-auto">
+          <div
+            class="card-wrapper py-[90px] flex justify-center items-center gap-30"
+          >
+            <!-- card 1 -->
+            <div class="flex flex-col justify-center items-center leading-6">
+              <img src="./assets/resident.svg" alt="image" />
+              <h3 class="text-white text-sm font-medium py-3">
+                Residental Service
+              </h3>
+              <p class="w-[237px] text-xs text-white text-center pb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry.
+              </p>
+              <button
+                class="bg-white w-[115px] h-[32px] text-base rounded-md underline hover:cursor-pointer"
+                type="button"
+              >
+                Learn More
+              </button>
+            </div>
+            <!-- card 1 -->
+            <div class="flex flex-col justify-center items-center leading-6">
+              <img src="./assets/commercial.svg" alt="image" />
+              <h3 class="text-white text-sm font-medium py-3">
+                Commercial Service
+              </h3>
+              <p class="w-[237px] text-xs text-white text-center pb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry.
+              </p>
+              <button
+                class="bg-white w-[115px] h-[32px] text-base rounded-md underline hover:cursor-pointer"
+                type="button"
+              >
+                Learn More
+              </button>
+            </div>
+            <!-- card 1 -->
+            <div class="flex flex-col justify-center items-center leading-6">
+              <img src="./assets/mantanence.svg" alt="image" />
+              <h3 class="text-white text-sm font-medium py-3">Maintenance</h3>
+              <p class="w-[237px] text-xs text-white text-center pb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry.
+              </p>
+              <button
+                class="bg-white w-[115px] h-[32px] text-base rounded-md underline hover:cursor-pointer"
+                type="button"
+              >
+                Learn More
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
