complete welcome section

--- a/index.html
+++ b/index.html
@@ -121,11 +121,7 @@
               >
                 +1800-9938-2839
               </h3>
-              <button
-                class="w-[160px] h-[44px] rounded-full font-primary text-white leading-6 uppercase bg-[#DD3142] shadow-md"
-              >
-                SEe all Service
-              </button>
+              <button class="btn">SEe all Service</button>
             </div>
             <!-- right side figure -->
             <div class="flex items-center mt-[100px] relative">
@@ -144,10 +140,11 @@
         </div>
       </section>
       <!-- Hero section End -->
+      <!-- Servise section Start  -->
       <section class="bg-[#DD3142] mt-[48px]">
         <div class="container mx-auto">
           <div
-            class="card-wrapper py-[90px] flex justify-center items-center gap-30"
+            class="card-wrapper py-[56px] flex justify-center items-center gap-30"
           >
             <!-- card 1 -->
             <div class="flex flex-col justify-center items-center leading-6">
@@ -201,6 +198,30 @@
           </div>
         </div>
       </section>
+      <!-- Service section End -->
+      <!-- welcome section Start -->
+      <section>
+        <div class="container mx-auto my-[76px]">
+          <div class="relative">
+            <img src="./assets/video.jpg" alt="image" class="h-[407px]" />
+            <div
+              class="w-[542px] h-[293px] bg-white/70 absolute left-0 top-14 pl-[49px]"
+            >
+              <h2 class="font-bold text-[44px] max-w-[366px] pt-4 leading-13">
+                Welcome to Plumber Company
+              </h2>
+              <p class="text-sm max-w-[432px]">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+              <button class="btn underline mt-[31px]">Learn More</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Welcome section End -->
     </main>
   </body>
 </html>
