complete history section

--- a/index.html
+++ b/index.html
@@ -222,6 +222,43 @@
         </div>
       </section>
       <!-- Welcome section End -->
+      <!-- History section Start -->
+      <section class="bg-[#DD3142]">
+        <div class="container m-auto">
+          <div class="wrapper flex justify-between items-center py-[38px]">
+            <!-- left-side-figure -->
+            <div class="figure">
+              <img
+                src="./assets/image.jpg"
+                alt="Histoy-image"
+                class="w-[630px] h-[314px]"
+              />
+            </div>
+            <!-- right-side-article -->
+            <div class="article">
+              <h2 class="font-bold text-[44px] text-white pb-2">
+                Our Company History
+              </h2>
+              <p class="w-[432px] text-sm text-white">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+              <h2 class="font-light text-[30px] text-white pt-[41px] pb-2">
+                Trust Our Team of Experts
+              </h2>
+              <p class="w-[432px] text-sm text-white">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- History section End -->
     </main>
   </body>
 </html>
