complete Plumber-Point & Figure Section

--- a/index.html
+++ b/index.html
@@ -259,6 +259,100 @@
         </div>
       </section>
       <!-- History section End -->
+      <!-- Plumber point start -->
+      <section>
+        <div class="container mx-auto">
+          <div
+            class="flex flex-col justify-center items-center pt-[87px] pb-[66px]"
+          >
+            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
+              Plumber Points
+            </h2>
+            <p
+              class="text-[#6D6D6D] text-center leading-[133%] max-w-[983px] py-[16px]"
+            >
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
+            <div class="grid grid-cols-4 gap-x-[168px] gap-y-[29px] mt-[33px]">
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+              <div class="radio-items flex items-center justify-center gap-2.5">
+                <img
+                  src="./assets/radio.svg"
+                  alt="icon"
+                  class="w-[15px] h-[15px]"
+                />
+                <h3 class="font-medium text-sm">Residental Service</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Plumber point End -->
+      <!-- figure start -->
+      <section>
+        <img src="./assets/image 4.jpg" alt="figure" class="h-[255px] m-auto" />
+      </section>
+      <!-- figure End -->
     </main>
   </body>
 </html>
+
+<!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
