--- a/index.html
+++ b/index.html
@@ -351,6 +351,307 @@
         <img src="./assets/image 4.jpg" alt="figure" class="h-[255px] m-auto" />
       </section>
       <!-- figure End -->
+      <!-- Team Section Start  -->
+      <section>
+        <div class="container mx-auto">
+          <div class="pt-[63px] pb-[67px] flex flex-col items-center">
+            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
+              Our Dedicated Team
+            </h2>
+            <p
+              class="text-[#6D6D6D] text-center leading-[133%] max-w-[983px] py-[16px]"
+            >
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
+            <div class="flex justify-between items-center gap-10 mt-[45px]">
+              <!-- card 1 -->
+              <div class="relative flex flex-col items-center">
+                <img
+                  src="./assets/image 12.png"
+                  alt="card_image"
+                  class="w-[262px] h-[368px]"
+                />
+                <div
+                  class="absolute bg-[#DD3142] -bottom-10 w-[210px] h-[78px] rounded-sm"
+                >
+                  <h4
+                    class="font-medium text-white text-[18px] text-center pt-2.5"
+                  >
+                    Vahid Kaleem
+                  </h4>
+                  <h5 class="font-medium text-white text-xl text-center pt-2">
+                    Plumber
+                  </h5>
+                </div>
+              </div>
+              <!-- card 2 -->
+              <div class="relative flex flex-col items-center">
+                <img
+                  src="./assets/image 12.png"
+                  alt="card_image"
+                  class="w-[262px] h-[368px]"
+                />
+                <div
+                  class="absolute bg-[#DD3142] -bottom-10 w-[210px] h-[78px] rounded-sm"
+                >
+                  <h4
+                    class="font-medium text-white text-[18px] text-center pt-2.5"
+                  >
+                    Vahid Kaleem
+                  </h4>
+                  <h5 class="font-medium text-white text-xl text-center pt-2">
+                    Plumber
+                  </h5>
+                </div>
+              </div>
+              <!-- card 4 -->
+              <div class="relative flex flex-col items-center">
+                <img
+                  src="./assets/image 12.png"
+                  alt="card_image"
+                  class="w-[262px] h-[368px]"
+                />
+                <div
+                  class="absolute bg-[#DD3142] -bottom-10 w-[210px] h-[78px] rounded-sm"
+                >
+                  <h4
+                    class="font-medium text-white text-[18px] text-center pt-2.5"
+                  >
+                    Vahid Kaleem
+                  </h4>
+                  <h5 class="font-medium text-white text-xl text-center pt-2">
+                    Plumber
+                  </h5>
+                </div>
+              </div>
+              <!-- card 4 -->
+              <div class="relative flex flex-col items-center">
+                <img
+                  src="./assets/image 12.png"
+                  alt="card_image"
+                  class="w-[262px] h-[368px]"
+                />
+                <div
+                  class="absolute bg-[#DD3142] -bottom-10 w-[210px] h-[78px] rounded-sm"
+                >
+                  <h4
+                    class="font-medium text-white text-[18px] text-center pt-2.5"
+                  >
+                    Vahid Kaleem
+                  </h4>
+                  <h5 class="font-medium text-white text-xl text-center pt-2">
+                    Plumber
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Team Section End -->
+      <!-- Blog section Start  -->
+      <section>
+        <div class="container mx-auto">
+          <div class="pt-[67px] pb-[50px]">
+            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
+              our recent blogs
+            </h2>
+            <div
+              class="blog-card-wrapper flex justify-between items-center pt-[43px]"
+            >
+              <!-- blog-card 1 -->
+              <div>
+                <img
+                  src="./assets/Mask Group.jpg"
+                  alt="blog-card"
+                  class="w-[332px] h-[132px]"
+                />
+                <div class="py-2.5">
+                  <h4 class="max-w-[330px] text-xl">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting.
+                  </h4>
+                  <p class="max-w-[330px] text-xs pt-[9px]">
+                    Don’t wrestle with rig assembly and hot, noisy miners at
+                    home. We have the fastest bitcoin mining hardware running
+                    for you....
+                  </p>
+                </div>
+              </div>
+              <!-- blog-card 2 -->
+              <div>
+                <img
+                  src="./assets/Mask Group.jpg"
+                  alt="blog-card"
+                  class="w-[332px] h-[132px]"
+                />
+                <div class="py-2.5">
+                  <h4 class="max-w-[330px] text-xl">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting.
+                  </h4>
+                  <p class="max-w-[330px] text-xs pt-[9px]">
+                    Don’t wrestle with rig assembly and hot, noisy miners at
+                    home. We have the fastest bitcoin mining hardware running
+                    for you....
+                  </p>
+                </div>
+              </div>
+              <!-- blog-card 3 -->
+              <div>
+                <img
+                  src="./assets/Mask Group.jpg"
+                  alt="blog-card"
+                  class="w-[332px] h-[132px]"
+                />
+                <div class="py-2.5">
+                  <h4 class="max-w-[330px] text-xl">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting.
+                  </h4>
+                  <p class="max-w-[330px] text-xs pt-[9px]">
+                    Don’t wrestle with rig assembly and hot, noisy miners at
+                    home. We have the fastest bitcoin mining hardware running
+                    for you....
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Blog section End  -->
+      <!-- footer section Start -->
+      <section class="bg-black">
+        <div class="container mx-auto">
+          <div class="wrapper flex justify-between gap-10 py-[31px]">
+            <!-- footer-article -->
+            <div>
+              <img src="./assets/logo_light.png" alt="logo-darkTheme" />
+              <p class="max-w-[362px] text-white text-xs pt-[27px] pb-[12px]">
+                Lore Issue is simply dummy text of the printing and typesetting
+                industry. Lore Issue has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book.
+              </p>
+              <div class="social-media-icons flex items-center gap-5">
+                <img src="./assets/fb.svg" alt="facebook" />
+                <img src="./assets/google.svg" alt="google" />
+                <img src="./assets/twitter.svg" alt="twitter" />
+              </div>
+            </div>
+            <!-- footer-service -->
+            <div class="max-w-[149px]">
+              <h3 class="font-bold text-[#DD3142] uppercase">Our Services</h3>
+              <div class="flex flex-col justify-center gap-3 pt-[40px]">
+                <a href="#" class="text-xs text-white text-left"
+                  >Plumber Service</a
+                >
+                <a href="#" class="text-xs text-white text-left"
+                  >Bathroom Plumbing Service</a
+                >
+                <a href="#" class="text-xs text-white text-left"
+                  >Kitchen Plumbing Service</a
+                >
+                <a href="#" class="text-xs text-white text-left"
+                  >Roof Plumbing Service</a
+                >
+                <a href="#" class="text-xs text-white text-left"
+                  >Bathroom Plumbing Service</a
+                >
+                <a href="#" class="text-xs text-white text-left"
+                  >Kitchen Plumbing Service</a
+                >
+              </div>
+            </div>
+            <!-- footer-contact -->
+            <div class="max-w-[151px]">
+              <h3 class="font-bold text-[#DD3142] uppercase">Contact</h3>
+              <div class="flex flex-col justify-center gap-3 pt-[18px]">
+                <li>
+                  <p class="text-sm text-white text-left">1800-9938-2839</p>
+                  <p class="text-xs text-white text-left">
+                    support@plumberpoint.com
+                  </p>
+                </li>
+                <li>
+                  <p class="text-sm text-white text-left">A-507 Mandoli</p>
+                  <p class="text-xs text-white text-left">New Delhi, India</p>
+                </li>
+                <li>
+                  <p class="text-sm text-white text-left">Mon-Sat 9.00-15:00</p>
+                  <p class="text-xs text-white text-left">Sunday CLOSED</p>
+                </li>
+              </div>
+            </div>
+            <!-- footer-post -->
+            <div class="max-w-[260px]">
+              <h3 class="font-bold text-[#DD3142] uppercase">Contact</h3>
+              <div class="flex flex-col justify-center pt-[10px]">
+                <!-- post 1 -->
+                <div class="flex justify-center items-center -ml-6 -mb-7">
+                  <img src="./assets/post.png" alt="footer-post" class="" />
+                  <div class="-mt-[10px] -ml-[10px]">
+                    <h5 class="font-medium text-[10px] text-white">
+                      Sewer Line Repair
+                    </h5>
+                    <p class="text-[8px] text-white">
+                      Lore Issue . Simply dummy text . The printing and
+                      typesetting industry. Lore Issue has been the industry'.
+                    </p>
+                  </div>
+                </div>
+                <!-- post 2 -->
+                <div class="flex justify-center items-center -ml-6 -mb-7">
+                  <img src="./assets/post.png" alt="footer-post" class="" />
+                  <div class="-mt-[10px] -ml-[10px]">
+                    <h5 class="font-medium text-[10px] text-white">
+                      Sewer Line Repair
+                    </h5>
+                    <p class="text-[8px] text-white">
+                      Lore Issue . Simply dummy text . The printing and
+                      typesetting industry. Lore Issue has been the industry'.
+                    </p>
+                  </div>
+                </div>
+                <!-- post 3 -->
+                <div class="flex justify-center items-center -ml-6">
+                  <img src="./assets/post.png" alt="footer-post" class="" />
+                  <div class="-mt-[10px] -ml-[10px]">
+                    <h5 class="font-medium text-[10px] text-white">
+                      Sewer Line Repair
+                    </h5>
+                    <p class="text-[8px] text-white">
+                      Lore Issue . Simply dummy text . The printing and
+                      typesetting industry. Lore Issue has been the industry'.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="h-0.5 bg-white" />
+      <footer class="bg-black">
+        <div class="container mx-auto">
+          <div class="flex justify-between items-center py-3">
+            <div>
+              <p class="text-[10px] text-[#DD3142]">
+                ©Copyright 2020 Techwero Systems.
+              </p>
+            </div>
+            <div class="flex justify-between items-center gap-15">
+              <p class="text-[10px] text-[#DD3142]">Term of Services</p>
+              <p class="text-[10px] text-[#DD3142]">Privacy & policy</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- footer section End  -->
     </main>
   </body>
 </html>
