add and complete all section of about.html

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./src/output.css" />
     <link rel="stylesheet" href="./src/input.css" />
   </head>
+
   <body>
     <!-- Navbar Start  -->
     <nav>
@@ -104,253 +105,204 @@
     </nav>
     <!-- Navbar End  -->
     <main>
-      <!-- Hero section Start -->
-      <section class="bg-[#FFFFFF]">
+      <!-- about us - banner section Start  -->
+      <section
+        class="bg-[url(../assets/section-banner.png)] bg-cover bg-center max-w-[1440px] h-[304px] relative m-auto"
+      >
+        <!-- overlay -->
+        <div
+          class="over-lay absolute inset-0 bg-gradient-to-r from-[#DD3142] to-[#C4C4C4]/20"
+        ></div>
         <div class="container mx-auto">
-          <div class="flex justify-between">
-            <!-- left side contact  -->
-            <div class="mt-[153px] leading-14">
-              <h1 class="font-hero text-[44px] font-extrabold uppercase">
-                Call us &nbsp;for any
-              </h1>
-              <h1 class="font-hero text-[44px] font-medium uppercase">
-                Plumbing Needs
-              </h1>
-              <h3
-                class="font-hero text-[34px] font-extrabold mt-[7px] tracking-tighter"
-              >
-                +1800-9938-2839
-              </h3>
-              <button class="btn">SEe all Service</button>
-            </div>
-            <!-- right side figure -->
-            <div class="flex items-center mt-[100px] relative">
-              <img
-                src="./assets/image 10.png"
-                alt="figure"
-                class="w-[302px] h-[436px] absolute -left-[270px] z-10"
-              />
-              <img
-                src="./assets/image 9.png"
-                alt="figure"
-                class="w-[390px] h-[341px]"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Hero section End -->
-      <!-- Servise section Start  -->
-      <section class="bg-[#DD3142] mt-[48px]">
-        <div class="container mx-auto">
-          <div
-            class="card-wrapper py-[56px] flex justify-center items-center gap-30"
-          >
-            <!-- card 1 -->
-            <div class="flex flex-col justify-center items-center leading-6">
-              <img src="./assets/resident.svg" alt="image" />
-              <h3 class="text-white text-sm font-medium py-3">
-                Residental Service
-              </h3>
-              <p class="w-[237px] text-xs text-white text-center pb-2">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry.
-              </p>
-              <button
-                class="bg-white w-[115px] h-[32px] text-base rounded-md underline hover:cursor-pointer"
-                type="button"
-              >
-                Learn More
-              </button>
-            </div>
-            <!-- card 1 -->
-            <div class="flex flex-col justify-center items-center leading-6">
-              <img src="./assets/commercial.svg" alt="image" />
-              <h3 class="text-white text-sm font-medium py-3">
-                Commercial Service
-              </h3>
-              <p class="w-[237px] text-xs text-white text-center pb-2">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry.
-              </p>
-              <button
-                class="bg-white w-[115px] h-[32px] text-base rounded-md underline hover:cursor-pointer"
-                type="button"
-              >
-                Learn More
-              </button>
-            </div>
-            <!-- card 1 -->
-            <div class="flex flex-col justify-center items-center leading-6">
-              <img src="./assets/mantanence.svg" alt="image" />
-              <h3 class="text-white text-sm font-medium py-3">Maintenance</h3>
-              <p class="w-[237px] text-xs text-white text-center pb-2">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry.
-              </p>
-              <button
-                class="bg-white w-[115px] h-[32px] text-base rounded-md underline hover:cursor-pointer"
-                type="button"
-              >
-                Learn More
-              </button>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Service section End -->
-      <!-- welcome section Start -->
-      <section>
-        <div class="container mx-auto my-[76px]">
           <div class="relative">
-            <img src="./assets/video.jpg" alt="image" class="h-[407px]" />
-            <div
-              class="w-[542px] h-[293px] bg-white/70 absolute left-0 top-14 pl-[49px]"
+            <h1
+              class="font-black text-[44px] text-[#EEFF06] pt-[106px] pb-[14px]"
             >
-              <h2 class="font-bold text-[44px] max-w-[366px] pt-4 leading-13">
-                Welcome to Plumber Company
-              </h2>
-              <p class="text-sm max-w-[432px]">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book
-              </p>
-              <button class="btn underline mt-[31px]">Learn More</button>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Welcome section End -->
-      <!-- History section Start -->
-      <section class="bg-[#DD3142]">
-        <div class="container m-auto">
-          <div class="wrapper flex justify-between items-center py-[38px]">
-            <!-- left-side-figure -->
-            <div class="figure">
-              <img
-                src="./assets/image.jpg"
-                alt="Histoy-image"
-                class="w-[630px] h-[314px]"
-              />
-            </div>
-            <!-- right-side-article -->
-            <div class="article">
-              <h2 class="font-bold text-[44px] text-white pb-2">
-                Our Company History
-              </h2>
-              <p class="w-[432px] text-sm text-white">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book
-              </p>
-              <h2 class="font-light text-[30px] text-white pt-[41px] pb-2">
-                Trust Our Team of Experts
-              </h2>
-              <p class="w-[432px] text-sm text-white">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- History section End -->
-      <!-- Plumber point start -->
-      <section>
-        <div class="container mx-auto">
-          <div
-            class="flex flex-col justify-center items-center pt-[87px] pb-[66px]"
-          >
-            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
-              Plumber Points
-            </h2>
-            <p
-              class="text-[#6D6D6D] text-center leading-[133%] max-w-[983px] py-[16px]"
-            >
+              About Us
+            </h1>
+            <p class="text-sm text-white max-w-[432px]">
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
               ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
+              type and scrambled it to make a type specimen book
             </p>
-            <div class="grid grid-cols-4 gap-x-[168px] gap-y-[29px] mt-[33px]">
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
+          </div>
+        </div>
+      </section>
+      <!-- about us - banner section End -->
+      <!-- plumber point section Start  -->
+      <section>
+        <div class="container m-auto">
+          <div class="py-[42px]">
+            <h2 class="font-medium text-3xl text-[#0E0E0E]">
+              Plumber Points Company
+            </h2>
+            <p class="peragraph pt-6">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen+ <br />book.
+              <br /><br />
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries, but also the leap into
+              electronic
+              <br /><br />
+              typesetting, remaining essentially unchanged. It was popularised
+              in the 1960s with the release of Letraset sheets containing Lorem
+              Ipsum passages, and more recently with desktop publishing software
+              like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+            <div
+              class="list-wrapper grid grid-cols-2 grid-rows-3 gap-5 justify-center pt-[46px]"
+            >
+              <!-- list-1 -->
+              <div class="flex items-start gap-3">
+                <div>
+                  <img
+                    src="./assets/radio.svg"
+                    alt="radio-icon"
+                    class="w-[15px] h-[15px]"
+                  />
+                </div>
+                <div>
+                  <h4 class="font-medium text-sm">Residental Service</h4>
+                  <p class="peragraph pt-2.5 max-w-[450px]">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text
+                  </p>
+                </div>
               </div>
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
+              <!-- list-2 -->
+              <div class="flex items-start gap-3">
+                <div>
+                  <img
+                    src="./assets/radio.svg"
+                    alt="radio-icon"
+                    class="w-[15px] h-[15px]"
+                  />
+                </div>
+                <div>
+                  <h4 class="font-medium text-sm">Residental Service</h4>
+                  <p class="peragraph pt-2.5 max-w-[450px]">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text
+                  </p>
+                </div>
               </div>
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
+              <!-- list-3 -->
+              <div class="flex items-start gap-3">
+                <div>
+                  <img
+                    src="./assets/radio.svg"
+                    alt="radio-icon"
+                    class="w-[15px] h-[15px]"
+                  />
+                </div>
+                <div>
+                  <h4 class="font-medium text-sm">Commercial Service</h4>
+                  <p class="peragraph pt-2.5 max-w-[450px]">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text
+                  </p>
+                </div>
               </div>
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
+              <!-- list-4 -->
+              <div class="flex items-start gap-3">
+                <div>
+                  <img
+                    src="./assets/radio.svg"
+                    alt="radio-icon"
+                    class="w-[15px] h-[15px]"
+                  />
+                </div>
+                <div>
+                  <h4 class="font-medium text-sm">Commercial Service</h4>
+                  <p class="peragraph pt-2.5 max-w-[450px]">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text
+                  </p>
+                </div>
               </div>
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
+              <!-- list-5 -->
+              <div class="flex items-start gap-3">
+                <div>
+                  <img
+                    src="./assets/radio.svg"
+                    alt="radio-icon"
+                    class="w-[15px] h-[15px]"
+                  />
+                </div>
+                <div>
+                  <h4 class="font-medium text-sm">Maintenance</h4>
+                  <p class="peragraph pt-2.5 max-w-[450px]">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text
+                  </p>
+                </div>
               </div>
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
-              </div>
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
-              </div>
-              <div class="radio-items flex items-center justify-center gap-2.5">
-                <img
-                  src="./assets/radio.svg"
-                  alt="icon"
-                  class="w-[15px] h-[15px]"
-                />
-                <h3 class="font-medium text-sm">Residental Service</h3>
+              <!-- list-6 -->
+              <div class="flex items-start gap-3">
+                <div>
+                  <img
+                    src="./assets/radio.svg"
+                    alt="radio-icon"
+                    class="w-[15px] h-[15px]"
+                  />
+                </div>
+                <div>
+                  <h4 class="font-medium text-sm">Maintenance</h4>
+                  <p class="peragraph pt-2.5 max-w-[450px]">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- Plumber point End -->
-      <!-- figure start -->
+      <!-- plumber point section End  -->
+      <!-- commercial section Start -->
       <section>
-        <img src="./assets/image 4.jpg" alt="figure" class="h-[255px] m-auto" />
+        <div class="container m-auto">
+          <div class="grid grid-cols-[auto_851px] relative py-10">
+            <div class="absolute top-1/2 -translate-y-1/2">
+              <img
+                src="./assets/commercial_image.png"
+                alt="commercial_image "
+                class="w-[630px] h-[314px]"
+              />
+            </div>
+            <div></div>
+            <div
+              class="bg-[#DD3142] h-[389px] flex justify-end items-center p-13"
+            >
+              <div>
+                <h1 class="font-bold text-[44px] text-white">
+                  Commercial Service
+                </h1>
+                <p class="text-sm text-white max-w-[432px]">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled it to make a type
+                  specimen book
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
-      <!-- figure End -->
+      <!-- commercial section End  -->
       <!-- Team Section Start  -->
       <section>
         <div class="container mx-auto">
