--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
         <div class="container mx-auto">
           <div class="relative">
             <h1
-              class="font-black text-[44px] text-[#EEFF06] pt-[106px] pb-[14px]"
+              class="font-black text-[44px] text-[#EEFF06] pt-[106px] pb-[14px] uppercase"
             >
               About Us
             </h1>
