add & complete contact.html

--- a/blog.html
+++ b/blog.html
@@ -110,7 +110,7 @@
           <div class="wrapper flex justify-between items-center pt-[19px]">
             <!-- left article  -->
             <div>
-              <h1 class="font-bold text-[44px] pb-[22px]">Our blog</h1>
+              <h1 class="font-bold text-[44px] pb-[22px]">Our blogs</h1>
               <p class="max-w-[432px] text-sm">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
